# 2D-game-map-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  setup.bat  setup.sh
assets/: images.xml  tilemap.xml
conan/linux/: conan_profile
include/glad/: glad.h
levels/: Level1.lua  Level1.map  LevelExample.lua  LevelExample.map  level1.lua  level1.map
lib/glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp
lib/glm/detail/: func_common.inl  func_exponential.inl  func_geometric.inl  func_geometric_simd.inl  func_integer_simd.inl  func_matrix.inl  setup.hpp  type_mat2x2.inl  type_mat3x3.inl  type_mat4x4.inl  type_quat.hpp  type_quat.inl
lib/glm/ext/: matrix_clip_space.hpp  matrix_common.hpp  matrix_common.inl  matrix_float3x2.hpp  matrix_relational.inl  matrix_transform.hpp  quaternion_common.hpp  quaternion_geometric.hpp  quaternion_trigonometric.hpp  scalar_common.hpp  scalar_integer.inl  scalar_relational.hpp  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_common.inl  vector_int1_precision.hpp  vector_int2_precision.hpp  vector_int3_precision.hpp  vector_int4_precision.hpp  vector_uint1_precision.hpp  vector_uint2_precision.hpp  vector_uint3_precision.hpp  vector_uint4_precision.hpp
lib/glm/gtc/: bitfield.inl  constants.hpp  integer.hpp  matrix_integer.hpp  matrix_inverse.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  type_precision.hpp  ulp.hpp  ulp.inl  vec1.hpp
lib/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  common.inl  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  dual_quaternion.inl  easing.hpp  euler_angles.hpp  extend.hpp  extended_min_max.hpp  exterior_product.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  io.inl  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_decompose.inl  matrix_factorisation.hpp  matrix_interpolation.hpp  matrix_interpolation.inl  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  (+29 more)
lib/imgui/: imgui_impl_glfw.cpp
lib/imgui_sdl/: imgui_sdl.cpp
lib/lua/: CMakeLists.txt
lib/stb/: stb_image.h
shaders/: fragmentShader.frag  model.frag  model.vert  vertexShader.vert
source/: AssetsManager.cpp  AssetsManager.h  Camera.cpp  Camera.h  Component.h  Constants.h  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  LuaManager.cpp  LuaManager.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  main.cpp
source/components/: MeshComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
src/: AssetsManager.cpp  AssetsManager.h  Camera.h  Component.h  Constants.h  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Mesh.cpp  Mesh.h  Renderer.h  Shader.cpp  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  glad.c  main.cpp
src/components/: SpriteComponent.h  TransformComponent.h
